--- a/notebooks/ResNet_VS_VGGNet.ipynb
+++ b/notebooks/ResNet_VS_VGGNet.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "A100",
-      "machine_shape": "hm"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -34,6 +17,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_SJ648d6C2Fd"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "import models\n",
@@ -43,24 +31,24 @@
         "from torchvision import transforms\n",
         "from torchvision import datasets\n",
         "from torch.utils.data import DataLoader"
-      ],
-      "metadata": {
-        "id": "_SJ648d6C2Fd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Data"
-      ],
       "metadata": {
         "id": "LCZlIVrcHvJZ"
-      }
+      },
+      "source": [
+        "# Data"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-mT94Co6DYZs"
+      },
+      "outputs": [],
       "source": [
         "num_classes = 10\n",
         "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -110,40 +98,54 @@
         "\n",
         "train_data = FastDataset(train_data, transform=train_transform, post_transform=train_post_transform, target_transform=target_transform)\n",
         "test_data = FastDataset(test_data, transform=test_transform, target_transform=target_transform)"
-      ],
-      "metadata": {
-        "id": "-mT94Co6DYZs"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_dataloader = DataLoader(train_data, batch_size=1024, shuffle=True, num_workers=12)\n",
-        "test_dataloader = DataLoader(test_data, batch_size=2048, num_workers=12)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "74LXf3fQTZJ2"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "train_dataloader = DataLoader(train_data, batch_size=1024, shuffle=True, num_workers=12)\n",
+        "test_dataloader = DataLoader(test_data, batch_size=2048, num_workers=12)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Models"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FAdHMhOsMrqI"
+      },
+      "outputs": [],
       "source": [
         "resnet, vggnet = models.from_config_file(\"configs/model.json\")\n",
         "resnet = resnet.to(device)\n",
         "vggnet = vggnet.to(device)"
-      ],
-      "metadata": {
-        "id": "FAdHMhOsMrqI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# ResNet"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "j-KPJbgtKfEM"
+      },
+      "outputs": [],
       "source": [
         "resnet_optimizer = torch.optim.Adam(resnet.parameters())\n",
         "resnet_lr_scheduler = torch.optim.lr_scheduler.StepLR(resnet_optimizer, 30, 0.5)\n",
@@ -160,26 +162,33 @@
         "    save_every=5,\n",
         "    root=\"/results/resnet\"\n",
         ")"
-      ],
-      "metadata": {
-        "id": "j-KPJbgtKfEM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "resnet_loop.train()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Z7Nuo8Q6_9Mk"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "resnet_loop.train()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# VGGNet"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hsVafzJFgEZv"
+      },
+      "outputs": [],
       "source": [
         "vggnet_optimizer = torch.optim.Adam(vggnet.parameters())\n",
         "vggnet_lr_scheduler = torch.optim.lr_scheduler.StepLR(vggnet_optimizer, 30, 0.5)\n",
@@ -196,23 +205,35 @@
         "    save_every=10,\n",
         "    root=\"/results/vggnet\"\n",
         ")\n"
-      ],
-      "metadata": {
-        "id": "hsVafzJFgEZv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "vggnet_loop.train()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "GNiQUwq94RJ1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "vggnet_loop.train()"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "A100",
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
